test/fail_compilation/fail221.d
void main() {
    void[] data;
    data ~= cast(void) 0;
}

